[package]
name = "gamvis"
version = "0.1.0"
edition = "2021"
authors = ["jikope <bimakope@gmail.com>"]
description = "Logarithmic audio / music visualizer using constant q transform (CQT)"
license = "MIT"
keywords = ["cqt", "audio", "music", "visualizer"]
repository = "https://github.com/jikope/gamvis"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.7.0"
raylib = { version = "3.7" }
